Fix canvas flicker

--- a/pointless/viewer/viewer.css
+++ b/pointless/viewer/viewer.css
@@ -98,7 +98,3 @@ header span {
 .notification:empty {
   display: none;
 }
-
-#screen {
-  transition: opacity 300ms;
-}
